@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<pages xmlns="http://jboss.com/products/seam/pages" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://jboss.com/products/seam/pages http://jboss.com/products/seam/pages-2.2.xsd">
+<pages xmlns="http://jboss.com/products/seam/pages" 
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://jboss.com/products/seam/pages http://jboss.com/products/seam/pages-2.2.xsd">
+
+<!--
+  <page view-id="/index.xhtml" action="#{mtest.pingxzckjczxljkc}" />
+  <page view-id="/foo.xhtml" action="#{mtdsfdsfest.ping}" />
+-->
+
+     <page view-id="/lists.xhtml" scheme="https" />
 
 
 </pages>
