@@ -19,6 +19,7 @@ Release Notes - Seam - Version 2.2.0.GA
     * [JBSEAM-4276] - A JBDS generated WAR project with reverse-engineered entities doesn't work
     * [JBSEAM-4278] - @Create methods on @Startup components are called without a transaction
     * [JBSEAM-4289] - DBUnitSeamTest can't be executed in the same suite as SeamTest
+    * [JBSEAM-4299] - Seam RESTEasy integration does not allow root resources defined with @Path("/") .
 
 ** Feature Request
     * [JBSEAM-3119] - Multiple WAR in EAR verification, example, and document
